--- a/src/main/resources/static/css/addItem.css
+++ b/src/main/resources/static/css/addItem.css
@@ -1,116 +1,117 @@
 @charset "UTF-8";
 
-body{
+body {
 	text-align: center;
 }
 
-#fileSelect{
-	width: 100px;/*横幅*/
-	padding: 5px;/*内側余白*/
-	background-color: rgb(138, 138, 138);/*背景色*/
-	color: rgb(255, 255, 255);/*文字の色*/
+#fileSelect {
+	width: 100px;
+	/*横幅*/
+	padding: 5px;
+	/*内側余白*/
+	background-color: #C0C0C0;
+	/*背景色*/
+	color: black;
+	/*文字の色*/
 	border: none;
-	border-radius: 4px;/*角の丸み*/
+	border-radius: 4px;
+	/*角の丸み*/
 	cursor: pointer;
 	margin: 10px;
 }
 
-#fileSelect:hover{
-	background-color: rgb(192, 192, 192);
+#fileSelect:hover {
+	background-color: #999999;
 	color: black;
 }
 
-/*select{*/
-/*	width: 400px;*/
-/*	height: 30px;*/
-/*	margin: 10px;*/
-/*}*/
-
-.addItembutton{
-	width: 150px;/*横幅*/
-	padding: 5px;/*内側余白*/
-	background-color:rgb(128, 128, 192);/*背景色*/
-	color: rgb(0, 0, 0);/*文字の色*/
-	border: none;
-	border-radius: 4px;/*角の丸み*/
+.addItembutton {
+	color: #003775;
+	font-size: 20px;
+	font-weight: bold;
+	background: #6C9BD2;
+	padding: 5px 30px;
+	border-radius: 6px;
+	transition: .3s;
 	cursor: pointer;
-	margin: 10px;
 }
 
-.addItembutton:hover{
-	background-color: rgb(128, 128, 255);
+.addItembutton:hover {
+	background-color: #003775;
+	color: white;
+	cursor: pointer;
 }
 
-main{
+main {
 	min-height: 85vh;
 	position: relative;
 	padding-bottom: 80px;
 	box-sizing: border-box;
-}	
+}
 
 .container {
-	display:flex;
+	display: flex;
 	overflow: hidden;
 	width: fit-content;
 	margin: 0 auto;
 }
 
 .box {
-	float:left;
+	float: left;
 	width: fit-content
 }
 
 /*教科書のセレクトボックス*/
 .selectbox-2 {
-    position: relative;
+	position: relative;
 }
 
 .selectbox-2::before,
 .selectbox-2::after {
-    position: absolute;
-    content: '';
-    pointer-events: none;
+	position: absolute;
+	content: '';
+	pointer-events: none;
 }
 
 .selectbox-2::before {
-    right: 0;
-    display: inline-block;
-    width: 1.8em;
-    height: 1.8em;
-    border-radius: 0 3px 3px 0;
-    background-color: #000000;
-    content: '';
-    margin: 10px;
+	right: 0;
+	display: inline-block;
+	width: 1.8em;
+	height: 1.8em;
+	border-radius: 0 3px 3px 0;
+	background-color: #000000;
+	content: '';
+	margin: 10px;
 }
 
 .selectbox-2::after {
-    position: absolute;
-    top: 30%;
-    right: 1.2em;
-    transform: translate(50%, -50%) rotate(45deg);
-    width: 6px;
-    height: 6px;
-    border-bottom: 3px solid #fff;
-    border-right: 3px solid #fff;
-    content: '';
-    margin: 5px;
+	position: absolute;
+	top: 30%;
+	right: 1.2em;
+	transform: translate(50%, -50%) rotate(45deg);
+	width: 6px;
+	height: 6px;
+	border-bottom: 3px solid #fff;
+	border-right: 3px solid #fff;
+	content: '';
+	margin: 5px;
 }
 
 .selectbox-2 select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    min-width: 400px;
-    height: 2em;
-    padding: .4em 3.6em .4em .8em;
-    border: 1px solid #000000;
-    border-radius: 3px;
-    color: #333333;
-    font-size: 0.9em;
-    cursor: pointer;
-    margin: 10px;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	min-width: 400px;
+	height: 2em;
+	padding: .4em 3.6em .4em .8em;
+	border: 1px solid #000000;
+	border-radius: 3px;
+	color: #333333;
+	font-size: 0.9em;
+	cursor: pointer;
+	margin: 10px;
 }
 
 .selectbox-2 select:focus {
-    outline: 1px solid #000000;
+	outline: 1px solid #000000;
 }
