--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,69 +1,88 @@
 @charset "UTF-8";
+
 .row {
-  display: flex;
-  flex-wrap:wrap;/*回り込み有効化*/
-  text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	/*回り込み有効化*/
+	text-align: center;
 }
+
 .col {
-  width: calc(100% / 3);/*3等分*/
+	width: calc(100% / 3);
+	/*3等分*/
 }
+
 .num {
-  text-align: center;
-  font-size: 1.5rem;
-  margin:10px;
-  padding:20px 0;
-  object-fit: cover;
-  height: 200px;
-  width: 155px;
+	text-align: center;
+	font-size: 1.5rem;
+	margin: 10px;
+	padding: 20px 0;
+	object-fit: cover;
+	height: 200px;
+	width: 155px;
 }
-.num:hover{
+
+.num:hover {
 	filter: brightness(200%) saturate(50%);
 }
 
-main{
+main {
 	min-height: 90vh;
 	position: relative;
 	padding-bottom: 80px;
 	box-sizing: border-box;
 }
 
-input[type="text"]{
-	width: 150px;/*横幅*/
-	padding: 5px;/*内側余白*/
-/*	margin-bottom: 30px;外側余白（下）*/
-	border: 1px solid #ccc;/*線の太さ、色*/
-	border-radius: 4px;/*角の丸み*/
+input[type="text"] {
+	width: 150px;
+	/*横幅*/
+	padding: 5px;
+	/*内側余白*/
+	border: 1px solid #ccc;
+	/*線の太さ、色*/
+	border-radius: 4px;
+	/*角の丸み*/
 	margin: 5px;
-	
+
 }
 
-.searchbtn{
-	width: 50px;/*横幅*/
-	padding: 3px;/*内側余白*/
-	background-color: #C0C0C0;/*背景色*/
-	color: black;/*文字の色*/
+.searchbtn {
+	width: 50px;
+	/*横幅*/
+	padding: 3px;
+	/*内側余白*/
+	background-color: #C0C0C0;
+	/*背景色*/
+	color: black;
+	/*文字の色*/
 	border: none;
-	border-radius: 4px;/*角の丸み*/
+	border-radius: 4px;
+	/*角の丸み*/
 	cursor: pointer;
 }
 
-.searchbtn:hover{
+.searchbtn:hover {
 	background-color: #999999;
 	color: black;
 }
 
-.sortbtn{
-	width: 60px;/*横幅*/
-	padding: 3px;/*内側余白*/
+.sortbtn {
+	width: 60px;
+	/*横幅*/
+	padding: 3px;
+	/*内側余白*/
 	margin: 5px;
-	background-color: #C0C0C0;/*背景色*/
-	color: black;/*文字の色*/
+	background-color: #C0C0C0;
+	/*背景色*/
+	color: black;
+	/*文字の色*/
 	border: none;
-	border-radius: 4px;/*角の丸み*/
+	border-radius: 4px;
+	/*角の丸み*/
 	cursor: pointer;
 }
 
-.sortbtn:hover{
+.sortbtn:hover {
 	background-color: #999999;
 	color: black;
 }
