--- a/src/main/resources/static/css/item.css
+++ b/src/main/resources/static/css/item.css
@@ -3,78 +3,108 @@
 /*==================================================
 スライダーのためのcss
 ===================================*/
-.slider {/*横幅94%で左右に余白を持たせて中央寄せ*/
-   width:94%;
-   height: auto;
-    margin:0 auto;
+.slider {
+	/*横幅94%で左右に余白を持たせて中央寄せ*/
+	width: 94%;
+	height: auto;
+	margin: 0 auto;
 }
 
 .slider img {
-    width:180px;/*スライダー内の画像を横幅100%に*/
-    height:auto;
-    margin:0 auto ;
+	width: 180px;
+	/*スライダー内の画像を横幅100%に*/
+	height: auto;
+	margin: 0 auto;
 }
 
 /*slickのJSで書かれるタグ内、スライド左右の余白調整*/
 
 .slider .slick-slide {
-    margin:0 10px;
+	margin: 0 10px;
 }
 
 /*矢印の設定*/
 
 /*戻る、次へ矢印の位置*/
-.slick-prev, 
+.slick-prev,
 .slick-next {
-    position: absolute;/*絶対配置にする*/
-    top: 42%;
-    cursor: pointer;/*マウスカーソルを指マークに*/
-    outline: none;/*クリックをしたら出てくる枠線を消す*/
-    border-top: 2px solid #666;/*矢印の色*/
-    border-right: 2px solid #666;/*矢印の色*/
-    height: 15px;
-    width: 15px;
+	position: absolute;
+	/*絶対配置にする*/
+	top: 42%;
+	cursor: pointer;
+	/*マウスカーソルを指マークに*/
+	outline: none;
+	/*クリックをしたら出てくる枠線を消す*/
+	border-top: 2px solid #666;
+	/*矢印の色*/
+	border-right: 2px solid #666;
+	/*矢印の色*/
+	height: 15px;
+	width: 15px;
 }
 
-.slick-prev {/*戻る矢印の位置と形状*/
-    left: -1.5%;
-    transform: rotate(-135deg);
+.slick-prev {
+	/*戻る矢印の位置と形状*/
+	left: -1.5%;
+	transform: rotate(-135deg);
 }
 
-.slick-next {/*次へ矢印の位置と形状*/
-    right: -1.5%;
-    transform: rotate(45deg);
+.slick-next {
+	/*次へ矢印の位置と形状*/
+	right: -1.5%;
+	transform: rotate(45deg);
 }
 
 /*ドットナビゲーションの設定*/
 
 .slick-dots {
-    text-align:center;
-	margin:20px 0 0 0;
+	text-align: center;
+	margin: 20px 0 0 0;
 }
 
 .slick-dots li {
-    display:inline-block;
-	margin:0 5px;
+	display: inline-block;
+	margin: 0 5px;
 }
 
 .slick-dots button {
-    color: transparent;
-    outline: none;
-    width:12px;/*ドットボタンのサイズ*/
-    height:12px;/*ドットボタンのサイズ*/
-    display:block;
-    border-radius:50%;
-    background:#ccc;/*ドットボタンの色*/
+	color: transparent;
+	outline: none;
+	width: 12px;
+	/*ドットボタンのサイズ*/
+	height: 12px;
+	/*ドットボタンのサイズ*/
+	display: block;
+	border-radius: 50%;
+	background: #ccc;
+	/*ドットボタンの色*/
 }
 
-.slick-dots .slick-active button{
-    background:#333;/*ドットボタンの現在地表示の色*/
+.slick-dots .slick-active button {
+	background: #333;
+	/*ドットボタンの現在地表示の色*/
 }
 
-main{
+main {
 	min-height: 85vh;
 	position: relative;
 	padding-bottom: 80px;
 	box-sizing: border-box;
+}
+
+#btn {
+	color: #003775;
+	font-size: 20px;
+	font-weight: bold;
+	background: #6C9BD2;
+	padding: 5px 30px;
+	border-radius: 6px;
+	transition: .3s;
+	cursor: pointer;
+}
+
+#btn:hover {
+	background-color: #003775;
+	color: white;
+	cursor: pointer;
 }
