--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -3,6 +3,7 @@
 /* 全体 */
 body {
 	margin: 0;
+	background-color: azure;
 }
 
 /* ヘッダーフッター */
@@ -249,4 +250,8 @@ footer {
 
 .claimjump:hover{
 	color: lightcyan;
+}
+
+table {
+	background-color: white;
 }
