--- a/src/main/resources/templates/viewTimetable.html
+++ b/src/main/resources/templates/viewTimetable.html
@@ -18,6 +18,10 @@
 				<th class="tabletitle">教員名</th>
 				<td>[[${teacher}]]</td>
 			</tr>
+			<tr>
+				<th class="tabletitle">曜日・時限</th>
+				<td><span th:if="${lesson.day == 1}">月</span><span th:if="${lesson.day == 2}">火</span><span th:if="${lesson.day == 3}">水</span><span th:if="${lesson.day == 4}">木</span><span th:if="${lesson.day == 5}">金</span><span th:if="${lesson.day == 6}">土</span><span th:if="${lesson.day == 7}">日</span>・[[${lesson.period}]]</td>
+			</tr>
 			<tr th:if="${textbookCount > 0}">
 				<th th:rowspan="${textbookCount}" class="tabletitle">教科書</th>
 				<td><span th:utext="${textbook1.textbookUrl}"></span>　<span th:if="${history1.status == 1}">未購入</span><span th:if="${history1.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history1.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="changebtn">切替</button></form></td>
