--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
 .error {
-	display: flex;
+	display: inline;
 	flex-direction: column;
 	width: fit-content;
-	margin: auto;
+	margin: 0 auto;
 }
 
 .box {
